styles.css
body {
    background-image: url('img/background.gif');
    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
}

#logo {
    height: 50px;
    width: 201px;
    float: left;
    padding: 5px 10px 5px 0;
}

#header {
    height: 60px;
    width: 100%;
    margin: auto;
    text-align: center;
    background-color: #1B1B1B;
}

.button {
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    display: inline-block;
    font-size: 14px;
    margin: 4px 2px;
    cursor: pointer;
    width: auto;
    text-overflow: ellipsis;
}

.nav {
    font-family: Hack, monospace;
    text-transform: uppercase;
    color: white;
    padding: 5px 8px;
    background: none;
}

.nav:hover {
    border-radius: 10px;
    color: #333333;
    background-color: #b2b4b2;
}

#table-of-contents {
    padding: 15px;
    width: 100%;
    white-space: nowrap;
}

#table-of-contents a {
    float: left;
    text-decoration: none;
}

#table-of-contents form {
    float: right;
    margin-right: 10px;
    text-decoration: none;
}

.cart {
    text-transform: uppercase;
    background-repeat: no-repeat;
    background-position: 10px center;
    background-size: 20px;
    padding-left: 40px;
    background-image: url("img/cart.png");
}

#table-of-contents .cart {
    float: right;
    margin-right: 50px;
}

#search {
    font-family: Hack, monospace;
}

h2 {
    text-align: center;
}

#model-selection {
    padding-top: 50px;
    text-align: center;
}

.phone {
    float: left;
    margin-top: 100px;
    margin-bottom: 100px;
    padding-left: 300px;
    width: 20%;
    height: 20%;
}

.phone-name {
    text-align: left;
}

.subheading {
    font-family: Hack, monospace;
    font-size: 15px;
    text-align: left;
}

.phone-info {
    margin-top: 100px;
    float: right;
    padding-right: 300px;
}

.colour-selection {
    padding: 20px 20px 20px 20px;
    border-radius: 50%;
}

.storage-selection {
    padding: 20px 30px 20px 30px;
    background-color: black;
    color: white;
    border-radius: 10px;
}

.black {
    background-color: black;
}

.blue {
    background-color: lightblue;
}

.yellow {
    background-color: lightyellow;
    color: black;
}

.pink {
    background-color: lightpink;
}

.titan-black {
    background-color: #4b4c4e;
}

.titan-white {
    background-color: #f3f2ec;
}

.titan-blue {
    background-color: #4a5160;
}

.titan-natural {
    background-color: #bbb5a9;
}

.center {
    display: block;
    margin: auto;
    width: 60%;
}

#all-content {
    background: lightgrey;
    margin: 60px;
    overflow: hidden;
}

.product-description {
    border: 2px solid #333333;
    width: 1000px;
    margin: 0 600px 50px 300px;
    padding: 10px;
    float: left;
    text-align: left;
    text-wrap: normal;
}

#final-configuration {
    display: inline-block;
    margin: 50px 0 200px 500px;
    text-align: center;
}

#other-products {
    padding-left: 30px;
}

figure img {
    width: 100%;
    display: block;
}

figure {
    display: inline-block;
    width: 31%;
    margin: 15px;
    vertical-align: auto;
    text-align: center;
}

figcaption {
    padding-top: 10px;
}

footer {
    padding-top: 100px;
    text-align: center;
    margin: 0;
}

#iphone-15, #iphone-15-pro {
    display: inline;
}

